4.47

- Fixed: Wait till player is alive or not unconscious anymore before putting him into jail
- Fixed: Jail escape counter was increased every second instead of just once per jail time