@@ -1,4 +1,5 @@
 4.47
 
+- Added: Teamkill forgive system (only available when mission revive and revive spectating is on)
 - Fixed: Wait till player is alive or not unconscious anymore before putting him into jail
 - Fixed: Jail escape counter was increased every second instead of just once per jail time
