@@ -204,6 +204,8 @@ class cfgFunctions {
 			addc(updatemove);
 			addc(chopcheck);
 			addc(gimmick);
+			addc(forgive);
+			addc(aophfytk);
 		};
 		class Dom_UI {
 			file = "clientui";
@@ -270,6 +272,8 @@ class cfgFunctions {
 			addc(correctwname);
 			addc(addto3drawar);
 			addc(optioncontrol);
+			addc(forgive_keh);
+			addc(forgive_timehandler);
 		};
 		class Dom_Common {
 			file = "common";
@@ -623,6 +627,7 @@ class cfgFunctions {
 			addc(addheadshot);
 			addc(v_hd);
 			addc(wa_ace_vec);
+			addc(exectkpd);
 		};
 		class Dom_PrePostInit {
 			file = "init";
