@@ -1,0 +1,5 @@
+// by Xeno
+#define THIS_FILE "fn_aophfytk.sqf"
+#include "..\x_setup.sqf"
+
+systemChat format [localize "STR_DOM_MISSIONSTRING_2067", _this];
