@@ -1,0 +1,5 @@
+// by Xeno
+#define THIS_FILE "fn_forgive.sqf"
+#include "..\x_setup.sqf"
+
+d_forgive = _this;
