@@ -253,6 +253,9 @@ class CfgRemoteExec {
 		class BIS_fnc_effectKilledSecondaries {};
 		class BIS_fnc_objectVar {};
 		class BIS_fnc_setCustomSoundController {};
+		class d_fnc_forgive {allowedTargets = 1;};
+		class d_fnc_aophfytk {allowedTargets = 1;};
+		class d_fnc_exectkpd {allowedTargets = 1;};
 #ifdef __TT__
 		class d_fnc_plcheckkillblufor {allowedTargets = 2;};
 		class d_fnc_plcheckkillopfor {allowedTargets = 2;};
@@ -1457,6 +1460,13 @@ default = 7;
 		values[] = {0,1,5,10,20,30,50};
 		default = 10;
 		texts[] = {"0","1","5","10","20","30","50"};
+	};
+	
+	class d_tk_forgive {
+		title = "$STR_DOM_MISSIONSTRING_2063";
+		values[] = {0,1};
+		default = 0;
+		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
 	};
 
 	class d_params_dl_18 {
