@@ -1,0 +1,9 @@
+// by Xeno
+//#define __DEBUG__
+#define THIS_FILE "fn_exectkpd.sqf"
+#include "..\x_setup.sqf"
+
+params ["_insti", "_killed"];
+
+[name _insti, name _killed, _insti] call d_fnc_TKKickCheck;
+[name _killed, name _insti] remoteExecCall ["d_fnc_unit_tk", [0, -2] select isDedicated];
